2003-01-20  Seth Robertson  <seth@startide.sysdetect.com>

	* lib/b_exec.c: Update users of tokenization to handle new
	variable expansion arguments

	* lib/b_string.c (bk_string_tokenize_split): Add variable
	expansion (two methods: CLC and environ)

2003-01-09  Brian Lindauer  <lindauer@malkmus.sysdetect.com>

	* lib/b_md5.c (bk_MD5Update): Changed inBuf parameter from char *
	to const char *.

	* lib/b_string.c (bk_string_alloc_vsprintf): Added
	bk_string_alloc_vsprintf and changed the implementation of
	bk_string_alloc_sprintf accordingly.

2002-12-30  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_strcode.c (bk_string_str2xml): partial fix for ticket #963:
	always allow whitespace chars, implement entity-encoding correctly,
	and use sizeof rather than strlen
	
2002-12-20  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_fileutils.c: note additional security flaws in this code

2002-11-20  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk.h (BK_NSECTOUSEC, BK_USECTONSEC): avoid overflow,
	perform rounding on nsec->usec conversion

2002-11-20  Brian Lindauer  <lindauer@malkmus.sysdetect.com>

	* lib/b_fileutils.c (bk_file_unlock): Change sprintf to snprintf.

2002-11-19  Brian Lindauer  <lindauer@malkmus.sysdetect.com>

	* include/libbk.h: Add autoconf'd BK-IN6_IS_ADDR_MULTICAST.

2002-11-18  Brian Lindauer  <lindauer@malkmus.sysdetect.com>

	* lib/b_ioh.c (bk_ioh_last_error): Get the last bkio errno.

2002-11-14  Brian Lindauer  <lindauer@malkmus.sysdetect.com>

	* lib/b_fileutils.c (bk_fileutils_is_true_pipe): Added function to
	test whether a file descriptor points at a true pipe.

2002-11-14  Alexander Dupuy  <dupuy@sysdetect.com>

	* lib/b_ioh.c (bk_ioh_fdctl): implement SO_LINGER correctly

2002-11-11  Alexander Dupuy  <dupuy@sysdetect.com>

	* include/libbk_include.h: defining _XOPEN_SOURCE breaks BSD compile

2002-11-08  Seth Robertson  <seth@hawking.sysdetect.com>

	* lib/b_error.c (bk_error_iprint): Free duplicate messages...
